# infra_demo_api

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  terraform.yml
nginx/: Dockerfile  nginx.conf
terraform/dev/: main.tf  provider.tf  variables.tf
