[tool.poetry]
name = "cointracker-hello-world"
version = "0.1.0"
description = ""
authors = ["Alvin Lee <alvinlee4197@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.0.0"
requests = "^2.26.0"
gunicorn = "^20.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"


[build-system]
requires = ["poetry-core==1.4.0"]
build-backend = "poetry.core.masonry.api"
